--- a/javascript/projects/package.json
+++ b/javascript/projects/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "demo",
+  "name": "projects",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
+    "start": "serve ./public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "eslint": "^5.2.0",
-    "eslint-config-rallycoding": "^3.2.0"
+  "dependencies": {
+    "serve": "^9.3.0"
   }
 }
