--- a/web/tools/package.json
+++ b/web/tools/package.json
@@ -14,12 +14,14 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.0.1",
-    "eslint": "^5.2.0",
+    "browser-sync": "^2.24.6",
     "gulp": "^3.9.1",
     "gulp-postcss": "^7.0.1",
     "gulp-watch": "^5.0.1",
     "postcss-import": "^11.1.0",
+    "postcss-mixins": "^6.2.0",
     "postcss-nested": "^3.0.0",
-    "postcss-simple-vars": "^4.1.0"
+    "postcss-simple-vars": "^4.1.0",
+    "stylelint-config-recommended": "^2.1.0"
   }
 }
