--- a/javascript/.vscode/tasks.json
+++ b/javascript/.vscode/tasks.json
@@ -4,12 +4,10 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "run js using node",
+            "label": "echo",
             "type": "shell",
             "command": "node",
-            "args": [
-                "${file}"
-            ],
+            "args": ["${file}"],
             "group": {
                 "kind": "build",
                 "isDefault": true
