--- a/css-proj-2-postcss/package.json
+++ b/css-proj-2-postcss/package.json
@@ -24,6 +24,8 @@
     "postcss-mixins": "^6.2.0",
     "postcss-nested": "^3.0.0",
     "postcss-simple-vars": "^4.1.0",
-    "stylelint-config-recommended": "^2.1.0"
+    "stylelint-config-recommended": "^2.1.0",
+    "webpack-cli": "^3.1.0",
+    "webpack-command": "^0.4.1"
   }
 }
