--- a/css-proj-2-postcss/package.json
+++ b/css-proj-2-postcss/package.json
@@ -18,14 +18,12 @@
     "gulp": "^3.9.1",
     "gulp-postcss": "^7.0.1",
     "gulp-rename": "^1.4.0",
-    "gulp-svg-sprite": "^1.4.0",
     "gulp-watch": "^5.0.1",
     "postcss-import": "^11.1.0",
     "postcss-mixins": "^6.2.0",
     "postcss-nested": "^3.0.0",
     "postcss-simple-vars": "^4.1.0",
     "stylelint-config-recommended": "^2.1.0",
-    "webpack-cli": "^3.1.0",
-    "webpack-command": "^0.4.1"
+    "webpack": "^4.16.2"
   }
 }
