--- a/nodejs/.vscode/tasks.json
+++ b/nodejs/.vscode/tasks.json
@@ -6,7 +6,12 @@
         {
             "label": "echo",
             "type": "shell",
-            "command": "node app.js"
+            "command": "node ${file}",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
+        
     ]
 }
