--- a/web/CORS/server/package.json
+++ b/web/CORS/server/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "helmet": "^3.13.0",
     "pg": "^7.4.3"
   },
   "devDependencies": {
