--- a/cpp/.vscode/settings.json
+++ b/cpp/.vscode/settings.json
@@ -1,36 +1,5 @@
 {
     "files.associations": {
-        "__bit_reference": "cpp",
-        "__split_buffer": "cpp",
-        "string": "cpp",
-        "vector": "cpp",
-        "__config": "cpp",
-        "__nullptr": "cpp",
-        "cstddef": "cpp",
-        "exception": "cpp",
-        "initializer_list": "cpp",
-        "new": "cpp",
-        "stdexcept": "cpp",
-        "type_traits": "cpp",
-        "typeinfo": "cpp",
-        "algorithm": "cpp",
-        "iosfwd": "cpp",
-        "ostream": "cpp",
-        "memory": "cpp",
-        "__functional_base": "cpp",
-        "atomic": "cpp",
-        "bitset": "cpp",
-        "chrono": "cpp",
-        "deque": "cpp",
-        "functional": "cpp",
-        "iterator": "cpp",
-        "limits": "cpp",
-        "locale": "cpp",
-        "ratio": "cpp",
-        "system_error": "cpp",
-        "tuple": "cpp",
-        "__tuple": "cpp",
-        "iostream": "cpp",
-        "__locale": "cpp"
+        "ostream": "cpp"
     }
 }
