--- a/python/.vscode/settings.json
+++ b/python/.vscode/settings.json
@@ -2,5 +2,5 @@
     "python.linting.pylintEnabled": false,
     "python.linting.enabled": true,
     "python.linting.pylintPath": "${workspace}",
-    "python.pythonPath": "/usr/local/bin/python3"
+    "python.pythonPath": "env/bin/python"
 }
