Update(auto commit)

--- a/cpp/.vscode/settings.json
+++ b/cpp/.vscode/settings.json
@@ -56,6 +56,7 @@
         "map": "cpp",
         "memory_resource": "cpp",
         "set": "cpp",
-        "string": "cpp"
+        "string": "cpp",
+        "__split_buffer": "cpp"
     }
 }
