Update(auto commit)

--- a/cpp/.vscode/tasks.json
+++ b/cpp/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "compile",
             "type": "shell",
-            "command": "clang++ -g -Wall -std=c++14 -stdlib=libc++ ${file} && ./a.out",
+            "command": "clang++ -O0 -g -Wall -std=c++14 -stdlib=libc++ ${file} && ./a.out",
             "args": [
                 // "-g",
                 // "-O2",
