--- a/cpp/.vscode/settings.json
+++ b/cpp/.vscode/settings.json
@@ -77,6 +77,7 @@
         "locale": "cpp",
         "queue": "cpp",
         "shared_mutex": "cpp",
-        "stack": "cpp"
+        "stack": "cpp",
+        "__bits": "cpp"
     }
 }
