--- a/typescript/package.json
+++ b/typescript/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^2.6.1"
+  },
+  "dependencies": {
+    "typescript": "^4.8.2"
   }
 }
