--- a/typescript/package.json
+++ b/typescript/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "lite-server": "^2.6.1"
+    "lite-server": "^2.6.1",
+    "ts-node": "^10.9.1"
   },
   "dependencies": {
     "typescript": "^4.8.2"
